syntax = "proto3";

package products;

import "google/protobuf/timestamp.proto";

option java_multiple_files = true;
option java_package = "com.ecommerceapp.generated.products";


message ProductItemResponse {
    string id = 1;
    string product_id = 2;
    int32 quantity = 3;
    int32 price = 4;
    repeated string images = 5;
    message VariationValue {
        string variation_id = 1;
        string value = 2;
    }
    repeated VariationValue variation_values = 6;
    google.protobuf.Timestamp created_at = 7;
    google.protobuf.Timestamp updated_at = 8;
}